# GLAD

./: CHANGELOG.md  CMakeLists.txt  README.md
cmake/: CPackConfig.cmake  NostraGLADConfig.cmake  welcome.txt
include/glad/: glad.h
src/: glad.c
